Interest feature and bugfixes
HTML:
add links to source and mhbates.com
remove caption all boxes required

CSS:
shift content up a bit
add overflow-x hidden to body to fix big x margin on mobile devices
change header and source code to em font sizes (vw unit shrinks too much)
add margin between buttons

JS:
add Interest Gained feature (new balance minus old balance)

--- a/style.css
+++ b/style.css
@@ -1,18 +1,31 @@
 body    {background-color: #282829;
-        color: lightgray;}
+        color: lightgray;
+        overflow-x: hidden;}
 
 .center {text-align: center;
-        top: 5%;
+        top: 1%;
         position: absolute;
         left: 50%;
         transform: translateX(-50%);
         width: 100%;}
 
+h1      {font-size: 1.5em;
+        margin: 0;}
+
+a       {text-decoration: none;
+        font-size: 0.75em;}
+a:link  {color: lightblue;}
+a:visited       {color: lightblue;}
+a:hover {color: lightgray;
+        text-decoration: underline;}
+
 input   {text-align: center;
         font-size: 1.5vw;
-        width: 25%;}
+        width: 25%;
+        background-color: #F8F8FF;}
 
-input[type="submit"], [type="reset"]    {width: 10%;}
+input[type="submit"], [type="reset"]    {width: 10%;
+                                        margin: 10px;}
 
 table   {text-align: center;
         margin-left: auto;
